# hometro-fitshow-ble

./: .gitignore  Justfile  README.md  pyproject.toml
captures/: replay-start-stop.example.txt
docs/: findings.md  refactor-plan.md  reverse-engineering-plan.md
src/hometro_fitshow_ble/: __init__.py  ble_ops.py  capture.py  cli.py  controller.py  fitshow_oem.py  ftms.py  models.py  protocol.py  replay.py  system_ble.py  web.py
src/hometro_fitshow_ble/web_static/: app.js  index.html  styles.css
tests/: test_control_contract.py  test_controller.py  test_device_scan.py  test_fitshow_oem.py  test_frontend_contract.py  test_ftms.py  test_protocol.py  test_replay.py
