[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "hometro-fitshow-ble"
version = "0.1.0"
description = "BLE reverse engineering toolkit for HomeTro / FitShow treadmills."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "David" }]
dependencies = [
  "bleak>=0.22,<2",
  "fastapi>=0.115,<1",
  "pydantic>=2,<3",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[project.scripts]
hometro-ble = "hometro_fitshow_ble.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
